--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli example/android/build example/android/app/build example/ios/build lib",
     "prepare": "bob build",
-    "release": "release-it"
+    "release": "release-it",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx}\""
   },
   "keywords": [
     "react-native",
